<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".screens.task_info.TaskInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/task"
            android:textSize="36sp" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_task_info__title"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/title" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/description" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_task_info__desc"
            style="@style/EditTextStyle.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:ellipsize="end"
            android:gravity="top|start"
            android:hint="@string/description"
            android:minHeight="250dp" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <DatePicker
            android:id="@+id/fragment_task_info__date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:datePickerMode="calendar"
            android:headerBackground="#4CAF50" />

        <TimePicker
            android:id="@+id/fragment_task_info__time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:timePickerMode="spinner" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_task_info__save_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:background="#4CAF50"
            android:gravity="center"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/save"
            android:textSize="14sp" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>